--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,1 +1,4 @@
 @use './components/App/App';
+@use './components/Home/Home';
+@use './components/BookContainer/BookContainer';
+@use './components/BookCard/BookCard';
