--- a/client/src/components/BookCard/_BookCard.scss
+++ b/client/src/components/BookCard/_BookCard.scss
@@ -1,6 +1,8 @@
 @use '../../styles' as s;
 
 .bookCard{
+    margin-right: 2.5%;
+    margin-top: 2.5%;
     background-color: s.$primary;
     display: flex;
     flex-direction: column;
@@ -9,7 +11,7 @@
     border-radius: s.$radius;
     color: s.$text;
     height: 325px;
-    width: 200px
+    width: 200px;
 }
 
 .bookCardHalf{
