--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .bookCard {
+  margin-right: 2.5%;
+  margin-top: 2.5%;
   background-color: rgba(128, 128, 128, 0.467);
   display: flex;
   flex-direction: column;
