--- a/client/src/components/BookCard/_BookCard.scss
+++ b/client/src/components/BookCard/_BookCard.scss
@@ -1,6 +1,7 @@
 @use '../../styles' as s;
 
 .bookCard{
+    transform: scale(.95);
     margin-right: 2.5%;
     margin-top: 2.5%;
     background-color: s.$primary;
