--- a/client/src/components/Header/_Header.scss
+++ b/client/src/components/Header/_Header.scss
@@ -12,3 +12,35 @@
 .headerTitle{
     font-size: 40px;
 }
+
+.searchBar {
+    justify-self: end;
+    width: 100px;
+    align-self: center;
+    margin-top: 2.5%;
+    font-size: 18px;
+    transition: 1s;
+    background-color: rgba(128, 128, 128, 0.247);
+    height: 40px;
+    border: none;
+    color: transparent;
+    border-radius: 5px;
+
+    &::placeholder {
+        color: transparent;
+    }
+
+    &:focus {
+        width: 301px;
+        // margin-left: 35vw;
+        transition: 1s;
+        background-color: rgba(128, 128, 128, 0.247);
+        color: s.$text;
+
+        &::placeholder {
+            color: rgba(s.$text, 0.5);
+            transition: 1s;
+
+        }
+    }
+}
