--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,14 @@
   font-weight: 600;
   font-size: 19px;
 }
+.bookTitle.extended {
+  font-size: 17px;
+  background-color: rgba(128, 128, 128, 0.467);
+  border-radius: 0px 0px 5px 5px;
+  padding: 12px;
+  padding-top: 0px;
+  margin-top: -12px;
+}
 
 .bookAuthor {
   font-weight: 100;
@@ -111,4 +119,9 @@ body {
   background-color: rgb(23, 23, 23);
   font-family: "Hind", sans-serif;
   color: rgb(216, 216, 216);
+}
+
+.hidden {
+  display: hidden;
+  color: transparent;
 }/*# sourceMappingURL=index.css.map */
