--- a/client/src/components/BookCard/_BookCard.scss
+++ b/client/src/components/BookCard/_BookCard.scss
@@ -35,14 +35,15 @@
 .bookTitle {
     font-weight: 600;
     font-size: 19px;
+    transition: .5s;
 
     &.extended {
-        font-size: 17px;
+        font-size: 16px;
         background-color: s.$primary;
         border-radius: 0px 0px s.$radius s.$radius;
-        padding: 12px;
-        padding-top: 0px;
+        padding: 9px;
         margin-top: -12px;
+        transition: .25s;
 
     }
 }
