--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,16 +75,20 @@
 
 .searchBar {
   justify-self: end;
-  width: 100px;
+  width: 20px;
   align-self: center;
   margin-top: 2.5%;
-  font-size: 18px;
+  font-size: 19px;
   transition: 1s;
   background-color: rgba(128, 128, 128, 0.247);
+  background: url("./images/search.png") left no-repeat;
+  align-self: center;
   height: 40px;
   border: none;
   color: transparent;
   border-radius: 5px;
+  text-align: right;
+  cursor: pointer;
 }
 .searchBar::-moz-placeholder {
   color: transparent;
@@ -100,6 +104,8 @@
   transition: 1s;
   background-color: rgba(128, 128, 128, 0.247);
   color: rgb(216, 216, 216);
+  text-align: right;
+  cursor: text;
 }
 .searchBar:focus::-moz-placeholder {
   color: rgba(216, 216, 216, 0.5);
