--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,4 +132,33 @@ body {
 .hidden {
   display: hidden;
   color: transparent;
+}
+
+.mainContainer {
+  background-color: skyblue;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 730px;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(135, 222, 141);
+  height: 100%;
+  width: 25%;
+  align-items: center;
+}
+
+.display {
+  display: flex;
+  flex-direction: column;
+  background-color: pink;
+  height: 100%;
+  width: 85%;
+  align-items: center;
 }/*# sourceMappingURL=index.css.map */
