--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,6 +3,7 @@
 @use './components/BookContainer/BookContainer';
 @use './components/BookCard/BookCard';
 @use './components/Header/Header';
+@use './components/BookPage/BookPage';
 
 @use './styles' as s;
 
@@ -33,7 +34,7 @@ body{
     flex-direction: column;
     background-color: rgb(135, 222, 141);
     height: 100%;
-    width: 25%;
+    width: 20%;
     align-items: center;
 }
 
@@ -42,6 +43,7 @@ body{
     flex-direction: column;
     background-color: pink;
     height: 100%;
-    width: 85%;
+    width: 80%;
     align-items: center;
+    justify-content: center;
 }
