--- a/client/src/components/BookPage/_BookPage.scss
+++ b/client/src/components/BookPage/_BookPage.scss
@@ -9,18 +9,30 @@
     width: 80%;
 }
 
-.bookPageCardCover {
+.bookPageCardSide {
     display: flex;
     flex-direction: column;
     background-color: rgb(183, 176, 230);
     height: 100%;
     width: 35%;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.bookPageCardMain{
+    background-color: powderblue;
+    height: 100%;
+    width: 65%;
 }
 
 .bookPageCardInformation {
     display: flex;
     flex-direction: column;
-    background-color: powderblue;
-    height: 100%;
-    width: 65%;
+    padding: 30px;
+}
+
+.bookPageCardCover{
+    margin-top: 10%;
+    // height: 40%;
+    width: 90%;
 }
