--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,20 +132,31 @@
   width: 80%;
 }
 
-.bookPageCardCover {
+.bookPageCardSide {
   display: flex;
   flex-direction: column;
   background-color: rgb(183, 176, 230);
   height: 100%;
   width: 35%;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.bookPageCardMain {
+  background-color: powderblue;
+  height: 100%;
+  width: 65%;
 }
 
 .bookPageCardInformation {
   display: flex;
   flex-direction: column;
-  background-color: powderblue;
-  height: 100%;
-  width: 65%;
+  padding: 30px;
+}
+
+.bookPageCardCover {
+  margin-top: 10%;
+  width: 90%;
 }
 
 body {
