--- a/client/src/components/BookPage/_BookPage.scss
+++ b/client/src/components/BookPage/_BookPage.scss
@@ -4,15 +4,18 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: powderblue;
+    background-color: s.$primary;
     height: 75%;
     width: 80%;
+    border-radius: s.$radius;
+    color: s.$text;
 }
 
 .bookPageCardSide {
     display: flex;
     flex-direction: column;
-    background-color: rgb(183, 176, 230);
+    background-color: s.$primary-extended;
+    border-radius: s.$radius 0px 0px s.$radius;
     height: 100%;
     width: 35%;
     align-items: center;
@@ -20,7 +23,7 @@
 }
 
 .bookPageCardMain{
-    background-color: powderblue;
+    // background-color: rgb(176, 207, 230);
     height: 100%;
     width: 65%;
 }
@@ -28,12 +31,24 @@
 .bookPageCardInformation {
     display: flex;
     flex-direction: column;
+    // justify-content: flex-start;
     padding: 30px;
-    
 }
 
 .bookPageCardCover{
     margin-top: 10%;
     // height: 40%;
     width: 90%;
+}
+
+.bookPageTitle{
+    margin-bottom: -2.5%;
+}
+
+.bookPageSubtitle{
+    margin-bottom: -1%;
+}
+
+.bookPageAuthors{
+    margin-bottom: -1%;
 }
