--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,9 @@
   padding: 9px;
   margin-top: -12px;
 }
+.bookTitle.shrunk {
+  font-size: 16px;
+}
 
 .bookAuthor {
   font-weight: 100;
@@ -127,15 +130,18 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: powderblue;
+  background-color: rgba(128, 128, 128, 0.467);
   height: 75%;
   width: 80%;
+  border-radius: 5px;
+  color: rgb(216, 216, 216);
 }
 
 .bookPageCardSide {
   display: flex;
   flex-direction: column;
-  background-color: rgb(183, 176, 230);
+  background-color: rgb(128, 128, 128);
+  border-radius: 5px 0px 0px 5px;
   height: 100%;
   width: 35%;
   align-items: center;
@@ -143,7 +149,6 @@
 }
 
 .bookPageCardMain {
-  background-color: powderblue;
   height: 100%;
   width: 65%;
 }
@@ -157,6 +162,18 @@
 .bookPageCardCover {
   margin-top: 10%;
   width: 90%;
+}
+
+.bookPageTitle {
+  margin-bottom: -2.5%;
+}
+
+.bookPageSubtitle {
+  margin-bottom: -1%;
+}
+
+.bookPageAuthors {
+  margin-bottom: -1%;
 }
 
 body {
