create featuredbook component

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,6 +4,7 @@
 @use './components/BookCard/BookCard';
 @use './components/Header/Header';
 @use './components/BookPage/BookPage';
+@use './components/FeaturedBook/FeaturedBook';
 
 @use './styles' as s;
 
