create functional searchpage component

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,6 +5,7 @@
 @use './components/Header/Header';
 @use './components/BookPage/BookPage';
 @use './components/FeaturedBook/FeaturedBook';
+@use './components/SearchPage/SearchPage';
 
 @use './styles' as s;
 
