--- a/client/src/index.css
+++ b/client/src/index.css
@@ -182,6 +182,29 @@ body {
   color: rgb(216, 216, 216);
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(128, 128, 128, 0.467);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(216, 216, 216, 0.9);
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(216, 216, 216, 0.75);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(216, 216, 216, 0.5);
+}
+
 .hidden {
   display: hidden;
   color: transparent;
