--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,7 +126,7 @@
   transition: 1s;
 }
 
-.bookPageCard {
+.featuredCard {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -137,7 +137,7 @@
   color: rgb(216, 216, 216);
 }
 
-.bookPageCardSide {
+.featuredCardSide {
   display: flex;
   flex-direction: column;
   background-color: rgb(128, 128, 128);
@@ -148,31 +148,32 @@
   justify-content: flex-start;
 }
 
-.bookPageCardMain {
+.featuredCardMain {
   height: 100%;
   width: 65%;
 }
 
-.bookPageCardInformation {
+.featuredCardInformation {
   display: flex;
   flex-direction: column;
   padding: 30px;
 }
 
-.bookPageCardCover {
+.featuredCardCover {
   margin-top: 10%;
-  width: 90%;
+  height: min(70%, 80vh);
+  width: 80%;
 }
 
-.bookPageTitle {
+.featuredTitle {
   margin-bottom: -2.5%;
 }
 
-.bookPageSubtitle {
+.featuredSubtitle {
   margin-bottom: -1%;
 }
 
-.bookPageAuthors {
+.featuredAuthors {
   margin-bottom: -1%;
 }
 
