--- a/client/src/components/FeaturedBook/_FeaturedBook.scss
+++ b/client/src/components/FeaturedBook/_FeaturedBook.scss
@@ -10,7 +10,9 @@
     border-radius: s.$radius;
     color: s.$text;
     color: black;
-    margin-top: 7.5%;
+    margin-top: 20%;
+    margin-bottom: 5%;
+    top: 50%;
 }
 
 .featuredCardSide {
