--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -1,4 +1,5 @@
 $primary : rgba(128, 128, 128, 0.467);
 $primary-extended : rgba(128, 128, 128);
+$dark : rgb(45, 45, 45);
 
 $text: rgb(216, 216, 216);
