--- a/client/src/index.css
+++ b/client/src/index.css
@@ -129,7 +129,8 @@
 }
 
 .reviewContainer {
-  background-color: orange;
+  background-color: rgb(45, 45, 45);
+  background-color: rgb(49, 38, 104);
   width: 100%;
   height: 100%;
   display: flex;
@@ -151,22 +152,31 @@
 .newReviewTitle {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  align-content: center;
 }
 
 .stars {
+  margin-left: 1%;
   display: flex;
   flex-direction: row;
+  font-size: 19px;
+}
+.stars div {
+  margin-right: 3%;
 }
 
 .reviewForm {
   display: flex;
   flex-direction: column;
 }
-
-.reviewInput {
+.reviewForm input {
   width: 75%;
   height: 100px;
   text-align: start;
+}
+.reviewForm button {
+  width: 15%;
 }
 
 .featuredCard {
@@ -179,7 +189,9 @@
   border-radius: 5px;
   color: rgb(216, 216, 216);
   color: black;
-  margin-top: 7.5%;
+  margin-top: 20%;
+  margin-bottom: 5%;
+  top: 50%;
 }
 
 .featuredCardSide {
