--- a/client/src/components/BookPage/_BookPage.scss
+++ b/client/src/components/BookPage/_BookPage.scss
@@ -3,7 +3,7 @@
 
 .reviewContainer {
     background-color: s.$dark;
-    background-color: rgb(49, 38, 104);
+    // background-color: rgb(49, 38, 104);
     width: 100%;
     height: 100%;
     display: flex;
@@ -15,7 +15,8 @@
 
 .reviewInfo {
     // padding: 30px;
-    background-color: cornflowerblue;
+    background-color: s.$dark;
+    // background-color: cornflowerblue;
     width: 95%;
     height: 100%;
 
@@ -53,5 +54,50 @@
 
     button {
         width: 15%;
+    }
+}
+
+
+.active{
+    color: white;
+}
+
+.userReviews{
+    margin-top: -1%;
+    display: flex;
+    flex-direction: column;
+}
+
+.userReviewCard{
+    background-color: s.$dark;
+    // background-color: salmon;
+    padding: 10px;
+    width: 97.5%;
+}
+
+
+.userReviewId{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.userReviewTitle{
+    span{
+        color: white;
+    }
+}
+
+.userReviewDate{
+    font-size: 15px;
+}
+
+.userReviewText{
+    display: flex;
+    flex-direction: row;
+    word-wrap: break-word;
+
+    .content{
+
     }
 }
