--- a/client/src/components/FeaturedBook/_FeaturedBook.scss
+++ b/client/src/components/FeaturedBook/_FeaturedBook.scss
@@ -4,13 +4,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 75%;
-    width: 80%;
+    height: 775px;
+    width: 900px;
     background-color: s.$primary;
     border-radius: s.$radius;
     color: s.$text;
     color: black;
-    margin-top: 20%;
+    margin-top: 5%;
     margin-bottom: 5%;
     top: 50%;
 }
@@ -23,7 +23,7 @@
     height: 100%;
     width: 35%;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .featuredCardMain{
@@ -40,9 +40,12 @@
 }
 
 .featuredCardCover{
-    margin-top: 10%;
-    height: min(70%, 80vh);
-    width: 80%;
+    // margin-top: 10%;
+    // height: min(70%, 80vh);
+    // width: 80%;
+
+    height:75%;
+    border-radius: 5px;
 }
 
 .featuredTitle{
