--- a/client/src/index.css
+++ b/client/src/index.css
@@ -130,7 +130,6 @@
 
 .reviewContainer {
   background-color: rgb(45, 45, 45);
-  background-color: rgb(49, 38, 104);
   width: 100%;
   height: 100%;
   display: flex;
@@ -141,7 +140,7 @@
 }
 
 .reviewInfo {
-  background-color: cornflowerblue;
+  background-color: rgb(45, 45, 45);
   width: 95%;
   height: 100%;
 }
@@ -179,17 +178,52 @@
   width: 15%;
 }
 
+.active {
+  color: white;
+}
+
+.userReviews {
+  margin-top: -1%;
+  display: flex;
+  flex-direction: column;
+}
+
+.userReviewCard {
+  background-color: rgb(45, 45, 45);
+  padding: 10px;
+  width: 97.5%;
+}
+
+.userReviewId {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.userReviewTitle span {
+  color: white;
+}
+
+.userReviewDate {
+  font-size: 15px;
+}
+
+.userReviewText {
+  display: flex;
+  flex-direction: row;
+  word-wrap: break-word;
+}
 .featuredCard {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 75%;
-  width: 80%;
+  height: 775px;
+  width: 900px;
   background-color: rgba(128, 128, 128, 0.467);
   border-radius: 5px;
   color: rgb(216, 216, 216);
   color: black;
-  margin-top: 20%;
+  margin-top: 5%;
   margin-bottom: 5%;
   top: 50%;
 }
@@ -202,7 +236,7 @@
   height: 100%;
   width: 35%;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .featuredCardMain {
@@ -217,9 +251,8 @@
 }
 
 .featuredCardCover {
-  margin-top: 10%;
-  height: min(70%, 80vh);
-  width: 80%;
+  height: 75%;
+  border-radius: 5px;
 }
 
 .featuredTitle {
@@ -311,5 +344,5 @@ body {
   height: 100%;
   width: 80%;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }/*# sourceMappingURL=index.css.map */
