--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -67,7 +67,7 @@ body{
     height: 100%;
     width: 80%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 
     div {
         // color: s.$text;
