create bookreview component, add functional edit review functionality

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,7 @@
 @use './components/BookPage/BookPage';
 @use './components/FeaturedBook/FeaturedBook';
 @use './components/SearchPage/SearchPage';
+@use './components/BookReview/BookReview';
 
 @use './styles' as s;
 
