--- a/client/src/components/BookPage/_BookPage.scss
+++ b/client/src/components/BookPage/_BookPage.scss
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: row;
     font-size: 19px;
+    cursor: pointer;
     div{
         margin-right: 3%;
     }
