--- a/client/src/components/BookReview/_BookReview.scss
+++ b/client/src/components/BookReview/_BookReview.scss
@@ -1,32 +1,47 @@
 @use '../../styles' as s;
 
 
-.userReviewCard{
+.userReviewCard {
     background-color: s.$dark;
     // background-color: salmon;
     padding: 10px;
     width: 97.5%;
+    margin-bottom: .5%;
 }
 
 
-.userReviewId{
+.userReviewId {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.userReviewTitle{
-    span{
+.userReviewTitle {
+    span {
         color: white;
     }
 }
 
-.userReviewDate{
+.userReviewDate {
     font-size: 15px;
 }
 
-.userReviewText{
+.userReviewText {
     display: flex;
     flex-direction: row;
     word-wrap: break-word;
+    margin-top: .5%;
+
+}
+
+.reactionCounter {
+    display: flex;
+    flex-direction: row;
+    margin-top: .5%;
+
+    h5 {
+        margin-top: 5px;
+        margin-bottom: 2px;
+        margin-right: 1%;
+    }
 }
