--- a/client/src/components/Header/_Header.scss
+++ b/client/src/components/Header/_Header.scss
@@ -1,7 +1,7 @@
 @use '../../styles' as s;
 
 
-.header{
+.header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -9,7 +9,7 @@
     align-items: center;
 }
 
-.headerTitle{
+.headerTitle {
     font-size: 40px;
     cursor: pointer;
 }
@@ -24,7 +24,7 @@
     background-color: rgba(128, 128, 128, 0.247);
     background: url('./images/search.png') left no-repeat;
     align-self: center;
-    height: 40px;
+    height: 42px;
     border: none;
     color: transparent;
     border-radius: s.$radius;
@@ -37,16 +37,18 @@
 
     &:focus {
         width: 301px;
+        height: 35px;
         transition: 1s;
-        background-color: rgba(128, 128, 128, 0.247);
+        background-color: rgba(128, 128, 128, 0.15);
         color: s.$text;
-        text-align: right;
         cursor: text;
+
+        font-size: 19px;
 
         &::placeholder {
             color: rgba(s.$text, 0.5);
             transition: 1s;
-
+            font-size: 19px;
         }
     }
 }
