--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,7 +88,7 @@
   background-color: rgba(128, 128, 128, 0.247);
   background: url("./images/search.png") left no-repeat;
   align-self: center;
-  height: 40px;
+  height: 42px;
   border: none;
   color: transparent;
   border-radius: 5px;
@@ -106,25 +106,29 @@
 }
 .searchBar:focus {
   width: 301px;
+  height: 35px;
   transition: 1s;
-  background-color: rgba(128, 128, 128, 0.247);
+  background-color: rgba(128, 128, 128, 0.15);
   color: rgb(216, 216, 216);
-  text-align: right;
   cursor: text;
+  font-size: 19px;
 }
 .searchBar:focus::-moz-placeholder {
   color: rgba(216, 216, 216, 0.5);
   -moz-transition: 1s;
   transition: 1s;
+  font-size: 19px;
 }
 .searchBar:focus:-ms-input-placeholder {
   color: rgba(216, 216, 216, 0.5);
   -ms-transition: 1s;
   transition: 1s;
+  font-size: 19px;
 }
 .searchBar:focus::placeholder {
   color: rgba(216, 216, 216, 0.5);
   transition: 1s;
+  font-size: 19px;
 }
 
 .reviewContainer {
@@ -262,6 +266,7 @@
   background-color: rgb(45, 45, 45);
   padding: 10px;
   width: 97.5%;
+  margin-bottom: 0.5%;
 }
 
 .userReviewId {
@@ -282,6 +287,18 @@
   display: flex;
   flex-direction: row;
   word-wrap: break-word;
+  margin-top: 0.5%;
+}
+
+.reactionCounter {
+  display: flex;
+  flex-direction: row;
+  margin-top: 0.5%;
+}
+.reactionCounter h5 {
+  margin-top: 5px;
+  margin-bottom: 2px;
+  margin-right: 1%;
 }
 
 body {
