--- a/client/src/components/SearchPage/_SearchPage.scss
+++ b/client/src/components/SearchPage/_SearchPage.scss
@@ -1,1 +1,57 @@
+@use '../../styles/' as s;
 
+
+.bigSearchCard {
+    background-color: s.$dark;
+    padding: 15px;
+    padding-top: 1px;
+    // width: 850px;
+}
+
+.searchRow {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+}
+
+.bigSearch {
+    margin-left: 1%;
+    font-size: 19px;
+    transition: 1s;
+    background-color: rgba(128, 128, 128, 0.15);
+    // background: url('./images/search.png') left no-repeat;
+    height: 40px;
+    width: 700px;
+    border: none;
+    border-radius: s.$radius;
+    color: rgba(s.$text, 0.5);
+
+    text-align: left;
+    cursor: pointer;
+
+    &::placeholder {
+        color: transparent;
+    }
+
+    &:focus {
+        transition: 1s;
+        background-color: rgba(128, 128, 128, 0.247);
+        width: 700px;
+
+        color: s.$text;
+        cursor: text;
+
+        font-size: 19px;
+
+        &::placeholder {
+            color: rgba(s.$text, 0.5);
+            transition: 1s;
+            font-size: 19px;
+        }
+    }
+
+}
+.filterRow{
+    margin-top: -5px;
+}
