--- a/client/src/components/SearchPage/_SearchPage.scss
+++ b/client/src/components/SearchPage/_SearchPage.scss
@@ -53,5 +53,12 @@
 
 }
 .filterRow{
-    margin-top: -5px;
+    margin-top: -15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+    h4 {
+    }
 }
