--- a/client/src/index.css
+++ b/client/src/index.css
@@ -330,7 +330,7 @@
   align-items: center;
 }
 .userReviewCard {
-  background-color: rgb(45, 45, 45);
+  background-color: rgb(65, 65, 65);
   padding: 10px;
   width: 97.5%;
   margin-bottom: 0.5%;
@@ -369,7 +369,8 @@
 }
 
 .emojiSelector {
-  opacity: 75%;
+  opacity: 92.5%;
+  position: absolute;
 }
 
 body {
