--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -42,7 +42,7 @@ body{
 }
 
 .mainContainer{
-    background-color: skyblue;
+    // background-color: skyblue;
     color: black;
     display: flex;
     flex-direction: row;
@@ -64,7 +64,7 @@ body{
 .display {
     display: flex;
     flex-direction: column;
-    background-color: pink;
+    // background-color: pink;
     height: 100%;
     width: 80%;
     align-items: center;
