--- a/client/src/index.css
+++ b/client/src/index.css
@@ -193,6 +193,7 @@
 }
 
 .featuredCard {
+  transform: scale(1.25);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -201,7 +202,6 @@
   background-color: rgba(128, 128, 128, 0.467);
   border-radius: 5px;
   color: rgb(216, 216, 216);
-  color: black;
   margin-top: 5%;
   margin-bottom: 5%;
   top: 50%;
@@ -260,6 +260,40 @@
   padding-top: 0px;
   margin-top: -1px;
   margin-bottom: -1px;
+}
+
+.shelfRow {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  margin-top: 1%;
+  font-size: 18px;
+}
+.shelfRow select {
+  background-color: rgb(45, 45, 45);
+  color: rgb(216, 216, 216);
+  border: none;
+  margin-right: 0.5%;
+  font-size: 15px;
+  padding: 2.5px;
+  border-radius: 3.3333333333px;
+  cursor: pointer;
+}
+.shelfRow button {
+  background-color: rgb(45, 45, 45);
+  color: rgb(216, 216, 216);
+  border: none;
+  font-size: 15px;
+  padding: 3.5px 7.5px;
+  border-radius: 3.3333333333px;
+  cursor: pointer;
+}
+.shelfRow button:hover {
+  transform: scale(1.05);
+  background-color: rgb(65, 65, 65);
+}
+.shelfRow button:active {
+  transform: scale(0.95);
 }
 
 .bigSearchCard {
@@ -408,7 +442,6 @@ body {
 }
 
 .mainContainer {
-  background-color: skyblue;
   color: black;
   display: flex;
   flex-direction: row;
@@ -430,7 +463,6 @@ body {
 .display {
   display: flex;
   flex-direction: column;
-  background-color: pink;
   height: 100%;
   width: 80%;
   align-items: center;
