--- a/client/src/components/FeaturedBook/_FeaturedBook.scss
+++ b/client/src/components/FeaturedBook/_FeaturedBook.scss
@@ -38,6 +38,10 @@
     flex-direction: column;
     // justify-content: flex-start;
     padding: 30px;
+    padding-bottom: 0px;
+    hr{
+        width: 5%;
+    }
 }
 
 .featuredCardCover {
@@ -89,8 +93,17 @@
     margin-top: 1%;
     font-size: 18px;
 
+    div {
+        font-size: 16px;
+        margin-right: 1%;
+        font-weight: 600;
+        background-color: s.$dark-alt;        
+        padding: 2.5px;
+        border-radius: calc(s.$radius/1.5);
+    }
+
     select {
-        background-color: s.$dark;
+        background-color: s.$dark-alt;
         color: s.$text;
         border: none;
         margin-right: .5%;
@@ -101,7 +114,7 @@
     }
 
     button {
-        background-color: s.$dark;
+        background-color: s.$dark-alt;
         color: s.$text;
         border: none;
         font-size: 15px;
@@ -118,4 +131,12 @@
             transform: scale(.95);
         }
     }
+}
+
+.featuredCardBottom{
+    background-color: s.$dark;
+    padding: 30px;
+    padding-top: 3px;
+    // margin-top: -px;
+    border-radius: 0px 0px s.$radius 0px;
 }
