--- a/client/src/index.css
+++ b/client/src/index.css
@@ -227,6 +227,10 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
+  padding-bottom: 0px;
+}
+.featuredCardInformation hr {
+  width: 5%;
 }
 
 .featuredCardCover {
@@ -269,8 +273,16 @@
   margin-top: 1%;
   font-size: 18px;
 }
+.shelfRow div {
+  font-size: 16px;
+  margin-right: 1%;
+  font-weight: 600;
+  background-color: rgb(65, 65, 65);
+  padding: 2.5px;
+  border-radius: 3.3333333333px;
+}
 .shelfRow select {
-  background-color: rgb(45, 45, 45);
+  background-color: rgb(65, 65, 65);
   color: rgb(216, 216, 216);
   border: none;
   margin-right: 0.5%;
@@ -280,7 +292,7 @@
   cursor: pointer;
 }
 .shelfRow button {
-  background-color: rgb(45, 45, 45);
+  background-color: rgb(65, 65, 65);
   color: rgb(216, 216, 216);
   border: none;
   font-size: 15px;
@@ -294,6 +306,13 @@
 }
 .shelfRow button:active {
   transform: scale(0.95);
+}
+
+.featuredCardBottom {
+  background-color: rgb(45, 45, 45);
+  padding: 30px;
+  padding-top: 3px;
+  border-radius: 0px 0px 5px 0px;
 }
 
 .bigSearchCard {
