--- a/client/src/index.css
+++ b/client/src/index.css
@@ -239,10 +239,15 @@
 }
 
 .featuredTitle {
-  margin-bottom: -2.5%;
+  margin-bottom: -1%;
+}
+.featuredTitle span {
+  font-size: 23px;
+  font-weight: 300;
 }
 
 .featuredSubtitle {
+  margin-top: 2%;
   margin-bottom: -1%;
 }
 
@@ -252,9 +257,7 @@
 
 .fullDescription {
   position: absolute;
-  margin-left: -1.5%;
-  margin-top: -3.5%;
-  width: 40%;
+  width: 55%;
   font-size: 17px;
   background-color: rgba(128, 128, 128, 0.95);
   border-radius: 5px;
