--- a/client/src/components/BookPage/_BookPage.scss
+++ b/client/src/components/BookPage/_BookPage.scss
@@ -3,9 +3,9 @@
 
 .reviewContainer {
     background-color: s.$dark;
-    // background-color: rgb(49, 38, 104);
+    background-color: rgb(49, 38, 104);
     width: 100%;
-    height: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -16,7 +16,7 @@
 .reviewInfo {
     // padding: 30px;
     background-color: s.$dark;
-    // background-color: cornflowerblue;
+    background-color: cornflowerblue;
     width: 95%;
     height: 100%;
 
