--- a/client/src/index.css
+++ b/client/src/index.css
@@ -133,8 +133,11 @@
 
 .reviewContainer {
   background-color: rgb(45, 45, 45);
+  background-color: rgb(49, 38, 104);
   width: 100%;
-  height: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -144,6 +147,7 @@
 
 .reviewInfo {
   background-color: rgb(45, 45, 45);
+  background-color: cornflowerblue;
   width: 95%;
   height: 100%;
 }
