--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,12 +66,37 @@
   cursor: pointer;
 }
 
+.header-container {
+  width: 100%;
+  z-index: 100;
+}
+
 .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
   align-items: center;
+}
+
+.option {
+  cursor: pointer;
+}
+.option:hover {
+  color: white;
+}
+
+.group {
+  width: 23.5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+}
+.group.end {
+  margin-right: 2.5%;
+  justify-content: flex-end;
 }
 
 .headerTitle {
@@ -131,6 +156,51 @@
   font-size: 19px;
 }
 
+.profile {
+  cursor: pointer;
+  margin-left: 5%;
+}
+
+.profile-menu {
+  border-radius: 2px;
+  position: absolute;
+  text-align: right;
+  top: 7.5%;
+  left: 90%;
+  background-color: rgba(65, 65, 65, 0.95);
+  z-index: 1;
+  -webkit-animation: dropDown 0.5s ease-in-out forwards;
+          animation: dropDown 0.5s ease-in-out forwards;
+  transform-origin: top center;
+  color: rgb(216, 216, 216);
+  border: 1px solid rgb(216, 216, 216);
+}
+
+.menu-option {
+  padding: 15px;
+  padding-right: 10px;
+  padding-left: 25px;
+  font-size: 17px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+@-webkit-keyframes dropDown {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+@keyframes dropDown {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
 .reviewContainer {
   background-color: rgb(45, 45, 45);
   background-color: rgb(49, 38, 104);
