styling adjustments and more header functionality

--- a/client/src/components/BookPage/_BookPage.scss
+++ b/client/src/components/BookPage/_BookPage.scss
@@ -3,7 +3,7 @@
 
 .reviewContainer {
     background-color: s.$dark;
-    background-color: rgb(49, 38, 104);
+    // background-color: rgb(49, 38, 104);
     width: 100%;
     height: fit-content;
     display: flex;
@@ -16,7 +16,7 @@
 .reviewInfo {
     // padding: 30px;
     background-color: s.$dark;
-    background-color: cornflowerblue;
+    // background-color: cornflowerblue;
     width: 95%;
     height: 100%;
 
