--- a/client/src/components/BookContainer/_BookContainer.scss
+++ b/client/src/components/BookContainer/_BookContainer.scss
@@ -1,3 +1,5 @@
+@use '../../styles' as s;
+
 .bookContainer{
     display: flex;
     flex-direction: row;
@@ -5,4 +7,5 @@
     flex-wrap: wrap;
     margin-left: 5%;
     margin-right: 5%;
+    background-color: rgb(15, 15, 15);
 }
