--- a/client/src/components/Header/_Header.scss
+++ b/client/src/components/Header/_Header.scss
@@ -13,10 +13,21 @@
   justify-content: space-between;
   align-content: center;
   align-items: center;
+
+  img {
+    transform: scale(.65);
+
+    &:hover{
+      cursor: pointer;
+      filter: grayscale(.75);
+    }
+
+  }
 }
 
 .option {
     cursor: pointer;
+    margin-right: 10%;
 
     &:hover {
       color: white;
@@ -27,7 +38,7 @@
   width: 23.5%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-content: center;
   align-items: center;
   //   background-color: red;
@@ -41,6 +52,7 @@
 .headerTitle {
   font-size: 40px;
   cursor: pointer;
+  margin-left: 20px;
 }
 
 .searchBar {
